# AI_based_Customer_Service_assistant

./: .gitignore  JustFile  mkdocs.yml  patterns.yml  pyproject.toml  solution.txt
backend/: __init__.py  config.yaml  fast_api_app.py
backend/app/: docker-compose.yaml
backend/app/ms_advance/: Dockerfile  __init__.py  app.py  llm_config.yaml  ms_advance.py  pyproject.toml
backend/app/prefect-data/: prefect.db
backend/app/quality_assurance/: Dockerfile  __init__.py  app.py  config.yaml  pyproject.toml  quality_assurance.py
backend/app/suggestions/: Dockerfile  __init__.py  app.py  config.yaml  pyproject.toml  suggester.py
backend/app/summarizer_llm/: Dockerfile  __init__.py  app.py  llm_config.yaml  pyproject.toml  summarizer.py
backend/doc_search/: __init__.py  embedder.py  indexer.py
backend/workflows/: __init__.py  pipeline.py
chat_cache/: chat.json  ms_adv.txt  rules.txt  solution.txt  summary.txt
docs/: architecture.md  experience.md  functionality.md  index.md
frontend/: __init__.py  app.py  patterns_config.py  text_analyzer.py  text_to_json.py
logs/: logs.txt
mlruns/0/: meta.yaml
mlruns/0/3b5a4f4b467247ce91c513c200a5eb3d/: meta.yaml
mlruns/0/7995f45deb8d4705b806b6582da80df9/: meta.yaml
mlruns/0/9c2db826035841eb9d3bbed866b17822/: meta.yaml
mlruns/163136485630678510/: meta.yaml
mlruns/324407182641484074/: meta.yaml
mlruns/330275785767596995/: meta.yaml
mlruns/560035551817800390/: meta.yaml
mlruns/732172090622966921/: meta.yaml
ticket_log/: 74f91898.json
transcripts/: case1.md  case2.md  case3.md  case4.md  case5.md
(+272 files in other folders)
